Corrected inconsistent spacing at bottom of About Me.

--- a/src/styles/components/AboutMe.less
+++ b/src/styles/components/AboutMe.less
@@ -7,6 +7,10 @@
         flex-direction: column;
         flex: 1 1 auto;
 
+        .row:last-child {
+            margin-bottom: 0px;       
+        }
+
         .row {
             flex: 0 0 auto;
             margin-bottom: 10px;
@@ -17,7 +21,7 @@
             }
 
             p {
-                margin-top: 0;
+                margin: 0;
             }
 
             &.name-row {
